--- a/src/dev_server/.env
+++ b/src/dev_server/.env
@@ -1,2 +1,2 @@
-MONGODB_URI=mongodb+srv://fullstack:gogogo1993@nosqlisland-9gtym.mongodb.net/Phonebook?retryWrites=true
+MONGODB_URI=mongodb+srv://fullstack:gogogo1993@nosqlisland-9gtym.mongodb.net/lunchtime?retryWrites=true
 PORT=3001
